--- a/index.html
+++ b/index.html
@@ -9,23 +9,26 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <div class="wrapper">
         <div class="user-card">
-            <img src="" alt="">
+            <img src="kirill-balobanov-2rIs8OH5ng0-unsplash.jpg" alt="">
             <h2>Mary Robins</h2>
             <h5>Architect</h5>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ab sapiente esse, possimus quis maxime id
                 maiores corrupti commodi cumque provident, magni perferendis similique expedita odio a tempore nisi.
                 Hic, doloremque!</p>
+                <div class="social-icon">
+                    <i class="fa-solid fa-camera"></i>
+                    <i class="fa-solid fa-heart"></i>
+                    <i class="fa-solid fa-user"></i>
+                </div>
+                <button>Follow</button>
         </div>
-        <div class="social-icon">
-            <i class="fa-solid fa-camera"></i>
-            <i class="fa-solid fa-heart"></i>
-            <i class="fa-solid fa-user"></i>
-        </div>
+
     </div>
 </body>
 
